[package]
name = "lucide-floem"
version = "0.1.0"
edition = "2021"
authors = ["Jared Moulton <jaredmoulton3@gmail.com>"]
license = "MIT"
description = """
An implementation of the lucide icon library for floem
"""
homepage = "https://github.com/jrmoulton/lucide-floem"
repository = "https://github.com/jrmoulton/lucide-floem"


[dependencies]
const_format = { version = "0.2.32", features = ["fmt"] }
lazy_static = "1.4.0"

# floem = { path = "../floem" }
floem = {git = "https://github.com/jrmoulton/floem", rev = "942aaacc48594b44055dab3b44cb50128d7a5d23"}
# floem = { git = "https://github.com/lapce/floem", rev = "ee556282ed25a195aa3a3e1d6fdcb405f6f1c466" }
regex = "1.10.3"
