[package]
name = "lucide-floem"
version = "0.1.0"
edition = "2021"
authors = ["Jared Moulton <jaredmoulton3@gmail.com>"]
license = "MIT"
description = """
An implementation of the lucide icon library for floem
"""
homepage = "https://github.com/jrmoulton/lucide-floem"
repository = "https://github.com/jrmoulton/lucide-floem"


[dependencies]
const_format = { version = "0.2.32" }
lazy_static = "1.4.0"

# floem = { path = "../floem" }
# floem = { git = "https://github.com/jrmoulton/floem", rev = "27844945f54f76c1e90e6ff9fe2182cc18bbc238" }
floem = { git = "https://github.com/lapce/floem", rev = "c31740a3b8c445464905202cd6387fdc34afcc36" }
regex = "1.10.3"
