[package]
name = "lucide-floem"
version = "0.1.0"
edition = "2021"
authors = ["Jared Moulton <jaredmoulton3@gmail.com>"]
license = "MIT"
description = """
An implementation of the lucide icon library for floem
"""
homepage = "https://github.com/jrmoulton/lucide-floem"
repository = "https://github.com/jrmoulton/lucide-floem"


[dependencies]
const_format = { version = "0.2.32" }
lazy_static = "1.4.0"

# floem = { path = "../floem" }
# floem = { git = "https://github.com/lapce/floem" }
floem = { git = "https://github.com/jrmoulton/floem" }
# floem = { git = "https://github.com/lapce/floem", rev = "04ee9e7c7786f1ab309b35287ec4a63574cbe9ae" }
regex = "1.10.3"
